--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="nav__lists">
                 <ul id="MenuItems">
-                    <li><a href="#">What We Do</a></li>
+                    <li><a href="#">What We Do.</a></li>
                     <li><a href="#">Who We Are</a></li>
                     <li><a href="#">Pricing</a></li>
                     <li><a href="#">Blog</a></li>
